k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: jobot
  labels:
    app.kubernetes.io/name: jobot
